tests/paczka1/fuzzy1/38144481.err
Error in line 15: Uzbgef59O S422 63,54
Error in line 19: Uzbgef59O S422 140,1
Error in line 9: A491 S673 34,3
Error in line 26: Uzbgef59O A491 39,7
Error in line 17: kB4WQ S422 91,0
